[workspace]
members = ["crates/cv", "crates/boa-wasm-guest"]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "npm"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
npm-scope = "@corevisor"
npm-package = "cv"
github-build-setup = "../build-setup.yml"
publish-jobs = ["npm"]
