[package]
name = "boa-wasm-guest"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/corevisor/cv"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
boa_engine = "0.21"
boa_gc = "0.21"
boa_runtime = { version = "0.21", default-features = false, features = ["fetch"] }
http = "1"
wasi = "=0.14.0"
